fixed CSS issue with header wrapping in large screen

--- a/AI/web_app/static/aikif.css
+++ b/AI/web_app/static/aikif.css
@@ -46,6 +46,8 @@ TD {
 
 #header {
 	font-size: 110%;
+    align: center;
+    width: 100%;
 }
 
 #menu_list a {
